# ResearchHQ

./: .env.example  .gitignore  CHANGELOG.md  README.md  beacon_issue_report.html  config.yaml  docker-compose.yml  install.py  pyproject.toml
.claude/: settings.local.json
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx  Sidebar.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/pages/: Agents.tsx  Dashboard.tsx  History.tsx  Settings.tsx  Workspace.tsx
frontend/src/store/: index.ts
reports/: market__2026_tech_job_crisis.json  market__2026_tech_job_crisis.md  market__nvidia.md  news__all_the_major_world_current_affais_as_of_07_05_2026.json  news__all_the_major_world_current_affais_as_of_07_05_2026.md  topic__ai_agents_in_cybersecurity.md  topic__llm_s_in_mnc_and_customer_service.json  topic__llm_s_in_mnc_and_customer_service.md
src/competiq/: __init__.py  cli.py  config.py  sources.py  storage.py
src/competiq/agents/: _worker.py  market.py  news.py  planner.py  researcher.py  signal.py  synthesizer.py
src/competiq/graph/: state.py  workflow.py
src/competiq/llm/: cost_tracker.py  router.py
src/competiq/tools/: search.py
src/researchhq/: __init__.py  cli.py  config.py  doctor.py  effort.py  events.py  history.py  logging_config.py  pipeline.py
src/researchhq/agents/: citation_guard.py  extractor.py  fetcher.py  formatter.py  planner.py  query_understanding.py  searcher.py  source_ranker.py  synthesizer.py  (+1 more)
tests/: test_citation_guard.py  test_cli.py  test_cost_tracker.py  test_doctor.py  test_e2e_mocked.py  test_ensemble_claim_extractor.py  test_ensemble_confidence.py  test_ensemble_consensus.py  test_ensemble_disagreement.py  test_ensemble_orchestrator.py  test_gui_worker_signals.py  test_history_db.py  test_modes.py  test_pipeline_events.py  test_planner.py  test_report_format.py  test_source_quality.py  test_verifier.py  test_verifier_rules.py
(+87 files in other folders)
